# skillpool

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  AGENTS_HANDBOOK.md  ARCHIVE.md  CHANGELOG.md  CODE_MAP.md  CONTRIBUTING.md  DOC_MAP.md  Makefile  PROGRESS.md  PROGRESS_V6.md  PROJECT_ATLAS.md  README.md  TASK_MAP.md  conftest.py  mkdocs.yml  pyproject.toml  symbol-index.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.scaffold-docs/: log.jsonl
.skillpool/: registry.jsonl
config/: slsa_provenance.json
deploy/: Dockerfile  RESOURCE_PLANNING.md  deployment.yml  docker-compose.yml  monitor-memory.sh
deploy/k8s/: deployment.yml
deploy/prometheus/: alert_rules.yml  scrape_config.yml
docs/: 4d-paradigm-usage-guide.md  api.md  deployment.md  gate-policy-acceptance.md  gate-policy-architecture.md  gate-policy-bdd.md  gate-policy-ops-manual.md  gate-policy-sdd.md  index.md  infrastructure-gaps.md
docs/concepts/: csdf.md  gate.md  registry.md
docs/decisions/: ADR-001-skillpool-integration.md
docs/getting-started/: installation.md  quickstart.md
docs/infra/: audit-telemetry.md  mcp-server.md
docs/integration/: codex-integration.md  openclaw-integration.md
docs/mcp-tools/: api-reference.md  api.md
docs/operations/: integration-log-2026-05-29.md
scripts/: check-doc-staleness.sh  ci-4d-checkpoint.sh  gen-code-map.sh  gen_code_map_py.py  gen_sbom.py  health-check.sh  metrics_server.py  migrate_registry_to_sqlite.py  refresh-all-docs.sh  sign_artifact.py  step2_quality_profile.py  upgrade-from-skill.sh  validate-links.sh
src/skillpool/: __init__.py  __main__.py  audit.py  clawmem_client.py  cli.py  config.py  csdf.py  gate.py  lifecycle.py  materializer.py  mcp_server.py  profile.py  quality.py  quality_weights.yaml  registry.py  schemas.py  telemetry.py
src/skillpool/adapters/: __init__.py  base.py  claude_adapter.py  codex_adapter.py  hermes_adapter.py
src/skillpool/audit/: __init__.py
src/skillpool/bridge/: __init__.py  freeze_detector.py  maintenance.py  wal_manager.py
src/skillpool/combiner/: __init__.py  lifecycle.py  models.py
src/skillpool/cost/: __init__.py  audit_hash.py  budget_tracker.py  dashboard.py  models.py  token_governor.py  trace_ceiling.py
src/skillpool/evolver/: __init__.py
src/skillpool/gain/: __init__.py
src/skillpool/gate_policy/: __init__.py  incremental.py  parser.py  state_machine.py
src/skillpool/graph/: __init__.py  ppr.py
src/skillpool/health/: __init__.py  check.py  degradation.py  models.py
tests/: __init__.py  conftest.py  e2e_http_transport.py  e2e_multi_agent.py  stress_mcp_stdio.py  stress_test_http.py  test_audit.py  test_budget_tracker.py  test_bug_collector.py  test_changelog.py  test_circuit_breaker.py  test_clawmem_client.py  test_clawmem_gaps.py  test_codex_adapter.py  test_combiner.py  test_config.py  test_conflict_detector.py  test_cost_dashboard.py  test_cost_gaps.py  test_cross_agent.py  test_defect_classifier.py  test_e2e.py  test_evolver.py  test_evolver_gaps.py  test_gain.py  test_gate.py  test_gate_policy.py  test_graph.py  test_health.py  test_health_gaps.py  test_integration.py  test_lazy_loader.py  test_lifecycle.py  test_lifecycle_gaps.py  test_logger.py  test_materializer.py  test_materializer_gaps.py  test_mcp_e2e.py  test_mcp_protocol.py  test_mcp_server.py  (+28 more)
tests/bdd/: test_cost_attribution.py  test_deployment_health.py  test_review_trigger.py  test_skill_resolver_api.py
tests/fixtures/: __init__.py  minimal_skill.csdf.yaml  sample_csdf_bad.md  sample_csdf_full.md  sample_csdf_minimal.md  sample_registry.jsonl  sample_skill.csdf.yaml
tests/integration/: __init__.py  test_workflow.py
tests/mcp/: __init__.py  test_mcp_server.py  test_mcp_server_extended.py
tests/unit/: __init__.py  test_adapters.py  test_audit.py  test_cli.py  test_csdf.py  test_gate.py  test_materializer.py  test_materializer_extended.py  test_quality.py  test_registry.py  test_registry_extended.py  test_telemetry.py
(+46 files in other folders)
