[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "skillpool"
version = "4.1.0"
description = "SkillPool V4.1 — Multi-agent skill registry, materialization, and lifecycle management"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "SkillPool Team" }]
keywords = ["skill", "registry", "mcp", "codex", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "fastmcp>=0.8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "python-frontmatter>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pip-audit>=0.7",
    "ruff>=0.4",
    "mypy>=1.10",
]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

[project.scripts]
skillpool = "skillpool.cli:main"
skillpool-mcp = "skillpool.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skillpool"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "mcp: MCP server tests",
    "slow: slow tests (>1s)",
]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
