[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillpool"
version = "4.1.0"
description = "Skill Pool V4.1 — AI Agent Skill Governance & Delivery Platform"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "fastmcp>=0.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
graph = ["numpy>=1.24", "scipy>=1.10"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-bdd>=7.0", "ruff>=0.1"]

[project.scripts]
skillpool = "skillpool.cli:main"
skillpool-mcp = "skillpool.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"
