[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillpool"
version = "4.3.0"
description = "Skill Pool V4.3 — AI Agent Skill Governance & Delivery Platform"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "fastmcp>=0.2.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
graph = ["numpy>=1.24", "scipy>=1.10"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-bdd>=7.0", "ruff>=0.1"]

[project.scripts]
skillpool = "skillpool.cli:main"
skillpool-mcp = "skillpool.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["skillpool"]
branch = true
omit = [
    "skillpool/cli.py",           # Click CLI — tested via subprocess
    "skillpool/__main__.py",      # Entry point
    "skillpool/adapters/*",       # Adapter stubs (not yet implemented)
    "skillpool/bridge/*",         # Bridge module (WIP)
    "skillpool/csdf.py",          # CSDF standalone (covered via materializer)
    "skillpool/quality.py",       # Quality module (placeholder)
    "skillpool/synergy/detector.py",  # 2-line re-export
]

[tool.coverage.report]
fail_under = 90
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120
target-version = "py311"
